// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat/messages/slack GetMessages when specified destination does exist performs correctly 1`] = `
Ok {
  "value": Object {
    "messages": Array [
      Object {
        "author": Object {
          "id": "UF4PRBHL7",
          "username": undefined,
        },
        "createdAt": 1644310634546.009,
        "id": "1644310634.546009",
        "reactions": Array [
          Object {
            "count": 1,
            "emoji": "eyes",
            "users": Array [
              "UF4PRBHL7",
            ],
          },
        ],
        "text": "hello world",
      },
      Object {
        "author": Object {
          "id": "UF4PRBHL7",
          "username": undefined,
        },
        "createdAt": 1643835555648.0688,
        "hasThread": true,
        "id": "1643835555.648069",
        "text": "test",
        "threadId": "1643835555.648069",
      },
      Object {
        "author": Object {
          "id": "UF4PRBHL7",
          "username": undefined,
        },
        "createdAt": 1643835553658.259,
        "id": "1643835553.658259",
        "reactions": Array [
          Object {
            "count": 1,
            "emoji": "eyes",
            "users": Array [
              "UF4PRBHL7",
            ],
          },
        ],
        "text": "test",
      },
    ],
    "nextPage": "bmV4dF90czoxNjQzNzk4NjQ5MTgyMDE5",
  },
}
`;

exports[`chat/messages/slack GetMessages when specified destination does exist performs correctly 2`] = `
Ok {
  "value": Object {
    "messages": Array [
      Object {
        "author": Object {
          "id": "UF4PRBHL7",
          "username": undefined,
        },
        "createdAt": 1643798649182.019,
        "id": "1643798649.182019",
        "text": "test :test_tube:",
        "updatedAt": 1643836476000,
      },
      Object {
        "author": Object {
          "id": "UF4PRBHL7",
          "username": undefined,
        },
        "createdAt": 1643216443234.0789,
        "id": "1643216443.234079",
        "reactions": Array [
          Object {
            "count": 1,
            "emoji": "tada",
            "users": Array [
              "UF4PRBHL7",
            ],
          },
        ],
        "text": "test",
        "updatedAt": 1643285583000,
      },
    ],
  },
}
`;

exports[`chat/messages/slack GetMessages when specified destination does not exist returns error 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"channel_not_found\\"
}
AST Path: definitions[0].statements[3].responseHandlers[0].statements[1]
Original Map Location: Line 42, column 7",
}
`;

exports[`chat/messages/slack GetMessages when specified thread destination does not exist returns error 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"thread_not_found\\"
}
AST Path: definitions[0].statements[3].responseHandlers[0].statements[1]
Original Map Location: Line 42, column 7",
}
`;

exports[`chat/messages/slack GetMessages when specified thread destination exists performs correctly 1`] = `
Ok {
  "value": Object {
    "messages": Array [
      Object {
        "author": Object {
          "id": "UF4PRBHL7",
          "username": undefined,
        },
        "createdAt": 1647249410808.6292,
        "hasThread": true,
        "id": "1647249410.808629",
        "text": "test 15",
        "threadId": "1643835555.648069",
      },
      Object {
        "author": Object {
          "id": "UF4PRBHL7",
          "username": undefined,
        },
        "createdAt": 1647249413263.429,
        "hasThread": true,
        "id": "1647249413.263429",
        "text": "test 16",
        "threadId": "1643835555.648069",
      },
      Object {
        "author": Object {
          "id": "UF4PRBHL7",
          "username": undefined,
        },
        "createdAt": 1647257637927.299,
        "hasThread": true,
        "id": "1647257637.927299",
        "text": "whatever",
        "threadId": "1643835555.648069",
      },
    ],
    "nextPage": "bmV4dF90czoxNjQ3MjQ5NDA5MDc4MDE5",
  },
}
`;

exports[`chat/messages/slack GetMessages when specified thread destination exists performs correctly 2`] = `
Ok {
  "value": Object {
    "messages": Array [
      Object {
        "author": Object {
          "id": "UF4PRBHL7",
          "username": undefined,
        },
        "createdAt": 1647249407437.989,
        "hasThread": true,
        "id": "1647249407.437989",
        "text": "test 13",
        "threadId": "1643835555.648069",
      },
      Object {
        "author": Object {
          "id": "UF4PRBHL7",
          "username": undefined,
        },
        "createdAt": 1647249409078.0188,
        "hasThread": true,
        "id": "1647249409.078019",
        "text": "test 14",
        "threadId": "1643835555.648069",
      },
    ],
  },
}
`;
